--- a/flowers/style.css
+++ b/flowers/style.css
@@ -29,23 +29,26 @@ h2 {
 	text-align: center;
 }
 
+h3 {
+	margin: 20px;
+}
+
 main {
-	border: 1px solid black;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	margin-bottom: calc(var(--footer-height));
+	border: none;
 }
 
 section {
-	border: 1px solid black;
 	background-color: var(--color5);
 	width: 1000px;
 	max-width: 80%;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
 	padding-top: var(--gutter);
 	padding-bottom: var(--gutter);
@@ -63,7 +66,7 @@ button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-left: 60px;
+	margin-left: 10px;
 	height: 30px;
 	width: 50px;
 	border-radius: 10%;
@@ -72,8 +75,8 @@ button {
 }
 
 button:hover {
-	height: 50px;
-	width: 100px;
+	height: 40px;
+	width: 60px;
 	cursor: pointer;
 	background-color: #7df;
 	color: #657;
