--- a/flowers/style.css
+++ b/flowers/style.css
@@ -20,6 +20,7 @@ body {
 	font-family: "Titillium Web", sans-serif;
 	background-color: var(--color2);
 	background-color: #fee;
+	color: #657;
 }
 
 h2 {
