--- a/flowers/style.css
+++ b/flowers/style.css
@@ -37,13 +37,20 @@ h3 {
 main {
 	display: flex;
 	flex-direction: row;
+	margin: 0px;
+	padding: 10px;
 	justify-content: center;
 	align-items: center;
-	margin-bottom: calc(var(--footer-height));
 	border: none;
+}
+p {
+	color: #7df;
+	text-shadow: 1px 1px #000;
+	text-decoration: none;
 }
 
 section {
+	border: none;
 	background-color: var(--color5);
 	width: 1000px;
 	max-width: 80%;
@@ -56,11 +63,6 @@ section {
 	margin-top: var(--gutter);
 	margin-bottom: var(--gutter);
 	border: solid 2px var(--color1);
-}
-
-p {
-	margin: 0;
-	padding: 0;
 }
 
 button {
@@ -85,6 +87,8 @@ button:hover {
 
 li {
 	list-style-type: none;
+	margin: 50px;
+	margin-right: 10px;
 }
 
 .flower-image {
