--- a/flowers/style.css
+++ b/flowers/style.css
@@ -65,7 +65,7 @@ section {
 	border: solid 2px var(--color1);
 }
 
-button {
+#button {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -77,7 +77,7 @@ button {
 	color: #7df;
 }
 
-button:hover {
+#button:hover {
 	height: 40px;
 	width: 60px;
 	cursor: pointer;
@@ -86,6 +86,8 @@ button:hover {
 }
 
 li {
+	display: flex;
+	border: 1px solid #d9a;
 	list-style-type: none;
 	margin: 50px;
 	margin-right: 10px;
